apps/base/expense-owl/expense-owl-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: expense-owl-ingressroute
  namespace: expense-owl
  annotations:
    gethomepage.dev/href: "https://expense-owl.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ExpenseOwl"
    gethomepage.dev/description: "Expense tracking and budgeting"
    gethomepage.dev/app: expense-owl
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons@main/png/expenseowl.png"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`expense-owl.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: expense-owl
          port: 8080
          scheme: http
  tls: {}
